k8s/web_crawler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-crawler
  namespace: default
spec:
  selector:
    app: web-crawler
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
